Mon Dec 15 00:54:26 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/db/SQLite/Connection.h:
        * cuts/utils/db/SQLite/Connection.cpp:

          . Implemented the has_table () method, which can be used to
            determine if a table exist in the database.

        * cuts/utils/logging/server/Logging_Server.cpp:

          . Added a catch () block for CUTS_DB_Exception types.

        * cuts/utils/testing/Test_Database.h:
        * cuts/utils/testing/Test_Database.cpp:

          . Bug fix where invoking the create () method multiple times on
            an existing database created duplicate entries in the cuts_test
            table.

Mon Dec 15 00:04:58 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MPC/config/cuts_logging_stub.mpb:

          . Added 'taolib' as a base class.

        * cuts/utils/Node_Daemon/Node_Daemon_Server.cpp:

          . Updated the help printout for the application.

        * cuts/utils/logging/client/Logging_Client.h:
        * cuts/utils/logging/client/Logging_Client.cpp:
        * cuts/utils/logging/client/Logging_Client_Options.h:
        * cuts/utils/logging/client/TestLoggerClient_i.h:
        * cuts/utils/logging/client/TestLoggerClient_i.cpp:
        * cuts/utils/logging/client/TestLoggerFactory_i.h:
        * cuts/utils/logging/client/TestLoggerFactory_i.inl:
        * cuts/utils/logging/client/TestLoggerFactory_i.cpp:
        * cuts/utils/logging/client/TestLogger_i.h:
        * cuts/utils/logging/client/TestLogger_i.inl:
        * cuts/utils/logging/client/TestLogger_i.cpp:
        * cuts/utils/logging/client/client.idl:
        * cuts/utils/logging/client/client.mpc:
        * cuts/utils/logging/logging.idl:

          . The logging client is no longer responsible for starting/stopping
            the logger.

          . Re-implemented the factories such that they do not the
            servants once they are activated. Instead, they only keep